links de paginas

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="icon" href="images/favicon.png">
 </head>
 <body class="is-preload">
 	<header id="header">
@@ -122,7 +123,7 @@
 					<h3>Website With Bootstrap 5</h3>
 					<p>Website created with the Bootstrap 5 Framework with some custom styles created by me.</p>
 					<ul class="actions small">
-						<li><a href="https://store.steampowered.com/" class="button small">View</a></li>
+						<li><a href="https://zelda-mauricio-coheterob.netlify.app/" class="button small">View</a></li>
 					</ul>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
@@ -130,7 +131,7 @@
 					<h3>My Thesis Presentation Website</h3>
 					<p>Responsive website created with pure CSS and with the help of JQuery Flexslider for the slider.</p>
 					<ul class="actions small">
-						<li><a href="#" class="button small">View</a></li>
+						<li><a href="https://tesis-mauricio-coheterob.netlify.app/" class="button small">View</a></li>
 					</ul>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
@@ -138,7 +139,7 @@
 					<h3>Crud with DataTables</h3>
 					<p>Database driven web application implemented with Bootstrap and DataTable plugin with MySQL database.</p>
 					<ul class="actions small">
-						<li><a href="#" class="button small">View</a></li>
+						<li><a href="https://php-crud-datatable.herokuapp.com/" class="button small">View</a></li>
 					</ul>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
@@ -146,7 +147,7 @@
 					<h3>Dashboard With Profile</h3>
 					<p>Web application with a database, the interface has a dashboard to manage the site.</p>
 					<ul class="actions small">
-						<li><a href="#" class="button small">View</a></li>
+						<li><a href="https://fast-basketball.herokuapp.com/" class="button small">View</a></li>
 					</ul>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
@@ -154,7 +155,7 @@
 					<h3>Login Responsive</h3>
 					<p>Website with responsive and animated login, all created with pure CSS.</p>
 					<ul class="actions small">
-						<li><a href="#" class="button small">View</a></li>
+						<li><a href="https://login-mauricio-coheterob.netlify.app/" class="button small">View</a></li>
 					</ul>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
