--- a/languages/spanish.html
+++ b/languages/spanish.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="../assets/css/main.css" />
+	<link rel="icon" href="../images/favicon.png">
 </head>
 <body class="is-preload">
 	<header id="header">
@@ -122,7 +123,7 @@
 					<h3>Página Web con Bootstrap 5</h3>
 					<p>Página web creada con el Framework Bootstrap con algunos estilos personalizados creados por mi.</p>
 					<ul class="actions small">
-						<li><a href="#" class="button small">Ver</a></li>
+						<li><a href="https://zelda-mauricio-coheterob.netlify.app/" class="button small">Ver</a></li>
 					</ul>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
@@ -130,7 +131,7 @@
 					<h3>Página Web de Presentación de mi Tesis</h3>
 					<p>Sitio web responsivo creado con CSS puro y con la ayuda de JQuery Flexslider para el slider.</p>
 					<ul class="actions small">
-						<li><a href="#" class="button small">Ver</a></li>
+						<li><a href="https://tesis-mauricio-coheterob.netlify.app/" class="button small">Ver</a></li>
 					</ul>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
@@ -138,7 +139,7 @@
 					<h3>Crud con DataTables</h3>
 					<p>Aplicación web con base de datos implementada con Bootstrap y el plugin DataTable.</p>
 					<ul class="actions small">
-						<li><a href="#" class="button small">Ver</a></li>
+						<li><a href="https://php-crud-datatable.herokuapp.com/" class="button small">Ver</a></li>
 					</ul>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
@@ -146,7 +147,7 @@
 					<h3>Dashboard con Perfil</h3>
 					<p>Aplicación web con una base de datos MySQL, la interfaz tiene un panel de control para gestionar el sitio.</p>
 					<ul class="actions small">
-						<li><a href="#" class="button small">Ver</a></li>
+						<li><a href="https://fast-basketball.herokuapp.com/" class="button small">Ver</a></li>
 					</ul>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
@@ -154,7 +155,7 @@
 					<h3>Login Responsivo</h3>
 					<p>Sitio web con inicio de sesión responsivo y animado, todo creado con CSS puro.</p>
 					<ul class="actions small">
-						<li><a href="#" class="button small">Ver</a></li>
+						<li><a href="https://login-mauricio-coheterob.netlify.app/" class="button small">Ver</a></li>
 					</ul>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
