--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1><strong>I am Mauricio Cohetero Baltazar</strong><br />
-				<a href="#one">What I Am?</a><br />
-				<a href="#two">What I Do?</a><br />
+				<a href="#one">Who Am I?</a><br />
+				<a href="#two">What Do I?</a><br />
 				<a href="#three">My Work</a>.<br />
 				<a href="#four">Contact me</a>.<br />
 			</h1>
@@ -203,10 +203,6 @@
 				</div>
 				<div class="col-4 col-12-small">
 					<ul class="labeled-icons">
-						<li>
-							<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-							221-515-0992
-						</li>
 						<li>
 							<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
 							<a href="mailto:mauriciocohetero@gmail.com">mauriciocohetero@gmail.com</a>
