--- a/languages/spanish.html
+++ b/languages/spanish.html
@@ -29,7 +29,7 @@
 				<h2>Hola, Soy Mauricio, <span style="color: #eb3939;">un desarrollador FullStack</span><br />
 				y <span style="color: #eb3939;">programador de Python</span> lleno de pasión.</h2>
 			</header>
-			<p>Estoy empezando como desarrollador freelance y estoy a punto de graduarme en la universidad. He realizado algunos proyectos personales sobre aplicaciones web con PHP y Python.  Soy una persona responsable, organizada, autodidacta, me gusta aprender cosas nuevas, solucionar problemas, con gran atención al detalle y siempre me gusta dar lo mejor de mí. Interesado en todos los aspectos del fullStack y en trabajar en proyectos ambiciosos o pequeños.</p>
+			<p>Estoy empezando como desarrollador freelance y estoy a punto de graduarme de la universidad. He realizado algunos proyectos personales sobre aplicaciones web con PHP y Python.  Soy una persona responsable, organizada, autodidacta, me gusta aprender cosas nuevas, solucionar problemas, con gran atención al detalle y siempre me gusta dar lo mejor de mí. Interesado en todos los aspectos del fullStack y en trabajar en proyectos ambiciosos o pequeños.</p>
 			<ul class="actions">
 				<li><a href="#two" class="button">Más Información</a></li>
 			</ul>
@@ -171,7 +171,7 @@
 
 		<section id="four">
 			<h2>Contáctame</h2>
-			<p>Estoy interesada en oportunidades como freelance, aquí están mis redes sociales y plataformas donde puedes contactar conmigo. No obstante, si tienes cualquier otra petición o pregunta, no dudes en hacérmelo saber.</p>
+			<p>Estoy interesado en oportunidades como freelance, aquí están mis redes sociales y plataformas donde puedes contactar conmigo. No obstante, si tienes cualquier otra petición o pregunta, no dudes en hacérmelo saber.</p>
 			<div class="row">
 				<div class="col-8 col-12-small">
 					<div class="logosFour">
@@ -203,10 +203,6 @@
 				</div>
 				<div class="col-4 col-12-small">
 					<ul class="labeled-icons">
-						<li>
-							<h3 class="icon solid fa-mobile-alt"><span class="label">Celular</span></h3>
-							221-515-0992
-						</li>
 						<li>
 							<h3 class="icon solid fa-envelope"><span class="label">Correo</span></h3>
 							<a href="mailto:mauriciocohetero@gmail.com">mauriciocohetero@gmail.com</a>
